Break a long run of bytes into lines, the way MOLD does
MOLD writes a newline after `#{` and then every thirty-two bytes, so a binary
long enough to matter arrives as an even block instead of one line running off
the screen. JEBOL wrote it all on one line. Bitsets go through the same
molder and wrap the same way.

The closing brace follows the last line's digits, so a length that is an exact
multiple of thirty-two leaves it alone on the line after. That is not a
special case: the newline belongs to a full line rather than being written
before the brace.

An image does the same in its own units -- ten pixels to a line, flat below
ten, with a comment in the C saying why: "looks better in console". And
MOLD/ALL writes an image as `#(image! ...)` rather than `make image! [...]`,
which the design note beside the method had described for a while without
anything doing it.

FORM never breaks. It writes the digits bare, because FIND forms its needle
before looking for it and a newline through the middle would stop it matching.

MOLD/FLAT is a flag now rather than a pass over the finished text. Replacing
every newline with a space is right for the indented lines of an object and
wrong for a binary, whose breaks carry no indent to strip: it turned
`#{AAAA<nl>BBBB}` into a binary with spaces through the middle, which is not
a binary at all.

MOLD/PART cuts the bytes before the layout rather than cutting the finished
string, which is `CHECK_MOLD_LIMIT` and the order matters: a limit of eight
makes it a short binary, and a short binary stays on one line. What is already
written comes off the limit first, so `mold/part/all img 30` has nine
characters left after its prefix, so nine pixels at most, so no break.

An empty file molds as %"" rather than a bare percent, which the lexer reads
as the modulo operator.

One JEBOL test recorded the construction form as something nothing did yet,
and is updated to assert it.

2 suite assertions come off known-gaps.txt: 1,419 to 1,417.